@@ -8,6 +8,7 @@ Development Progress	:
       Works around non-power of two buffer size problems on some systems.
       (adapted from darkplaces.)
     * snd_alsa.c: Print the device name upon snd_pcm_open failures.
+    * alsa_funcs.h: Added more functions in commented out form for future use.
 
 2010-11-07 (CVS):
     * Updated README, BUGS and COMPILE documents.
